Updated index.html with a href link to a blog_post.html page

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/food.jpg" alt="" /></a>
+										<a href="blog_post.html" class="image fit"><img src="images/food.jpg" alt="" /></a>
 										<header>
 											<h3>Food Consumption per capita: are you eating to much?</h3>
 										</header>
